# smart_workflow_assistant

example_registry/: .gitignore  README.md  function_discovery.py  main.py  models.py  pyproject.toml
example_registry/functions/: __init__.py  ai.py  airtable.py  aws.py  communication.py  database.py  email.py  github.py  google_services.py  http.py  notion.py  payment.py  salesforce.py  slack.py  storage.py  support.py  web.py
